--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,9 @@ dependencies:
   badges: ^3.1.2
   carousel_slider: ^5.0.0
   reaction_askany: ^0.1.2
+  audioplayers: ^6.1.0
+  path_provider: ^2.1.4
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
@@ -100,6 +103,8 @@ flutter:
     - assets/audio/
     - assets/config/
     - assets/flags/
+    - assets/sound/
+    - assets/facebook_reactions/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
