--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,15 @@ dependencies:
   audioplayers: ^6.1.0
   path_provider: ^2.1.4
   photo_view: ^0.15.0
+  dotted_border: ^2.1.0
+  file_picker: ^8.1.2
+  # CHAT NEEDS
+  flutter_chat_ui: ^1.6.15
+  permission_handler: ^10.2.0
+  flutter_sound: ^9.2.13
+  mime: ^1.0.5
+  image_picker: ^1.1.2
+  open_filex: ^4.5.0
 
 dev_dependencies:
   flutter_test:
