--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,11 +73,15 @@ dependencies:
   file_picker: ^8.1.2
   # CHAT NEEDS
   flutter_chat_ui: ^1.6.15
-  permission_handler: ^10.2.0
   flutter_sound: ^9.2.13
   mime: ^1.0.5
   image_picker: ^1.1.2
   open_filex: ^4.5.0
+  voice_message_package: ^2.2.1
+  just_audio: ^0.9.40
+  flutter_vibrate: ^1.3.0
+  font_awesome_flutter: ^10.7.0
+  social_media_recorder: ^1.1.12
 
 dev_dependencies:
   flutter_test:
