--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,6 +47,15 @@
 		<true/>
 		<key>NSMicrophoneUsageDescription</key>
 		<string>I have a feature to record voice note in my chat</string>
-
+		<key>NSCameraUsageDescription</key>
+		<string>This app requires access to the camera to change user profile image.</string>
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string>This app needs access to location when open to get nearest resturant and markets</string>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>This app requires access to the photo library to change user profile image.</string>
+		<key>UIStatusBarHidden</key>
+		<true/>
+		<key>UIViewControllerBasedStatusBarAppearance</key>
+		<false/>
 	</dict>
 </plist>
