--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,12 @@ dependencies:
   flutter_vibrate: ^1.3.0
   font_awesome_flutter: ^10.7.0
   social_media_recorder: ^1.1.12
+  geocoding: ^3.0.0
+  geolocator: ^12.0.0
+  google_maps_flutter: ^2.7.0
+  firebase_core: ^2.24.2
+  firebase_messaging: ^14.7.10
+  flutter_local_notifications: ^17.2.1+2
 
 dev_dependencies:
   flutter_test:
