--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ dependencies:
   firebase_messaging: ^14.7.10
   flutter_local_notifications: ^17.2.1+2
   flutter_form_builder: ^9.3.0
+  safe_device: ^1.1.8
 
 dev_dependencies:
   flutter_test:
