--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,7 @@ dependencies:
   flutter_local_notifications: ^17.2.1+2
   flutter_form_builder: ^9.3.0
   safe_device: ^1.1.8
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
