--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,7 @@ dependencies:
   flutter_form_builder: ^9.3.0
   safe_device: ^1.1.8
   collection: ^1.18.0
+  drop_down_search_field: ^1.0.6
 
 dev_dependencies:
   flutter_test:
