--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -23,7 +23,7 @@ plugins {
     id "com.google.gms.google-services" version "4.3.15" apply false
     // END: FlutterFire Configuration
     // END: FlutterFire Configuration
-    id "org.jetbrsh ./scripts/fast-start.shains.kotlin.android" version "2.0.21" apply false
+    id "org.jetbrains.kotlin.android" version "2.0.21" apply false
 }
 
 include ":app"
