--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,11 +34,15 @@ android {
     namespace = "abwab.digital.bulka"
     compileSdk = 34
     ndkVersion = "25.1.8937393"
+compileOptions {
+    sourceCompatibility JavaVersion.VERSION_17
+    targetCompatibility JavaVersion.VERSION_17
+}
+kotlinOptions {
+    jvmTarget = '17'
+}
 
-    compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
-    }
+
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
