--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,7 +41,20 @@ compileOptions {
 kotlinOptions {
     jvmTarget = '17'
 }
-
+subprojects {
+    afterEvaluate { project ->
+        if (project.plugins.hasPlugin("com.android.application") ||
+                project.plugins.hasPlugin("com.android.library")) {
+            project.android {
+                compileSdkVersion 34                
+            }
+        }
+    }
+}
+subprojects {
+    project.buildDir = "${rootProject.buildDir}/${project.name}"
+    project.evaluationDependsOn(':app')
+}
 
 
     defaultConfig {
