--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,6 +92,7 @@ dependencies:
   safe_device: ^1.1.8
   collection: ^1.18.0
   drop_down_search_field: ^1.0.6
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
