--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,7 @@ dependencies:
   collection: ^1.18.0
   drop_down_search_field: ^1.0.6
   flutter_staggered_animations: ^1.1.1
+  jwt_decode: ^0.3.1
 
 dev_dependencies:
   flutter_test:
