--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,7 +87,7 @@ dependencies:
   google_maps_flutter: ^2.7.0
   firebase_core: ^2.24.2
   firebase_messaging: ^14.7.10
-  flutter_local_notifications: ^17.2.1+2
+  flutter_local_notifications: ^17.2.3
   flutter_form_builder: ^9.3.0
   safe_device: ^1.1.8
   collection: ^1.18.0
