--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,76 +28,70 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
-  equatable: ^2.0.5
-  get_it: ^7.7.0
-  dio: ^5.5.0+1
-  flutter_bloc: ^8.1.6
-  bloc: ^8.1.4
-  shared_preferences: ^2.2.3
-  hexcolor: ^3.0.1
-  easy_localization: ^3.0.7
-  cached_network_image: ^3.3.1
-  expandable_text: ^2.3.0
-  intl: ^0.19.0
-  flutter_screenutil: ^5.9.3
-  dartz: ^0.10.1
-  flutter_secure_storage: ^4.2.1
-  flutter_native_splash: ^2.2.16
-  flutter_launcher_icons: ^0.11.0
-  flutter_animate: ^4.5.0
-  shimmer: ^3.0.0
-  flutter_styled_toast: ^2.2.1
-  google_fonts: ^6.2.1
-  smooth_page_indicator: ^1.2.0+3
-  awesome_dialog: ^3.2.1
-  haptic_feedback: ^0.5.1+1
-  lottie: ^3.1.2
-  pin_code_fields: ^8.0.1
-  intl_phone_field: ^3.2.0
-  flutter_svg: ^2.0.10+1
-  skeletonizer: ^1.4.2
-  badges: ^3.1.2
-  carousel_slider: ^5.0.0
-  reaction_askany: ^0.1.2
   audioplayers: ^6.1.0
-  path_provider: ^2.1.4
-  photo_view: ^0.15.0
+  awesome_dialog: ^3.2.1
+  badges: ^3.1.2
+  bloc: ^8.1.4
+  cached_network_image: ^3.3.1
+  carousel_slider: ^5.0.0
+  collection: ^1.18.0
+  cupertino_icons: ^1.0.6
+  dartz: ^0.10.1
+  dio: ^5.5.0+1
   dotted_border: ^2.1.0
+  drop_down_search_field: ^1.0.6
+  easy_localization: ^3.0.7
+  equatable: ^2.0.5
+  expandable_text: ^2.3.0
   file_picker: ^8.1.2
-  # CHAT NEEDS
-  flutter_chat_ui: ^1.6.15
-  flutter_sound: ^9.2.13
-  mime: ^1.0.5
-  image_picker: ^1.1.2
-  open_filex: ^4.5.0
-  voice_message_package: ^2.2.1
-  just_audio: ^0.9.40
-  flutter_vibrate: ^1.3.0
-  font_awesome_flutter: ^10.7.0
-  social_media_recorder: ^1.1.12
-  geocoding: ^3.0.0
-  geolocator: ^12.0.0
-  google_maps_flutter: ^2.7.0
   firebase_core: ^2.24.2
   firebase_messaging: ^14.7.10
-  flutter_local_notifications: ^17.2.3
+  flutter:
+    sdk: flutter
+  flutter_animate: ^4.5.0
+  flutter_bloc: ^8.1.6
+  flutter_chat_ui: ^1.6.15
   flutter_form_builder: ^9.3.0
-  safe_device: ^1.1.8
-  collection: ^1.18.0
-  drop_down_search_field: ^1.0.6
+  flutter_launcher_icons: ^0.11.0
+  flutter_local_notifications: ^17.2.3
+  flutter_native_splash: ^2.2.16
+  flutter_screenutil: ^5.9.3
+  flutter_secure_storage: ^4.2.1
+  flutter_sound: ^9.2.13
   flutter_staggered_animations: ^1.1.1
+  flutter_styled_toast: ^2.2.1
+  flutter_svg: ^2.0.10+1
+  flutter_vibrate: ^1.3.0
+  font_awesome_flutter: ^10.7.0
+  geocoding: ^3.0.0
+  geolocator: ^12.0.0
+  get_it: ^7.7.0
+  google_fonts: ^6.2.1
+  google_maps_flutter: ^2.7.0
+  haptic_feedback: ^0.5.1+1
+  hexcolor: ^3.0.1
+  image_picker: ^1.1.2
+  intl: ^0.19.0
+  intl_phone_field: ^3.2.0
+  just_audio: ^0.9.40
   jwt_decode: ^0.3.1
+  lottie: ^3.1.2
+  mime: ^1.0.5
+  open_filex: ^4.5.0
+  path_provider: ^2.1.4
+  photo_view: ^0.15.0
+  pin_code_fields: ^8.0.1
+  reaction_askany: ^0.1.2
+  safe_device: ^1.1.8
+  shared_preferences: ^2.2.3
+  shimmer: ^3.0.0
+  skeletonizer: ^1.4.2
+  smooth_page_indicator: ^1.2.0+3
+  social_media_recorder: ^1.1.12
+  url_launcher: ^6.3.1
+  voice_message_package: ^2.2.1
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -105,11 +99,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  flutter_test:
+    sdk: flutter
   pretty_dio_logger: ^1.3.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -130,13 +125,10 @@ flutter:
     - assets/flags/
     - assets/sound/
     - assets/facebook_reactions/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
