--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,6 @@ dependencies:
   flutter_local_notifications: ^17.2.3
   flutter_native_splash: ^2.2.16
   flutter_screenutil: ^5.9.3
-  flutter_secure_storage: ^4.2.1
   flutter_sound: ^9.2.13
   flutter_staggered_animations: ^1.1.1
   flutter_styled_toast: ^2.2.1
@@ -71,6 +70,7 @@ dependencies:
   haptic_feedback: ^0.5.1+1
   hexcolor: ^3.0.1
   image_picker: ^1.1.2
+  infinite_scroll_pagination: ^4.0.0
   intl: ^0.19.0
   intl_phone_field: ^3.2.0
   just_audio: ^0.9.40
